--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             height: 100vh;
-            padding: 20px;
+            padding-top: 40px;
             text-align: center;
         }
         .container {
@@ -28,7 +28,7 @@
             max-width: 500px;
             background: #111;
             padding: 20px;
-            border-radius: 10px;
+            border-radius: 15px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
         }
         h1 {
@@ -49,7 +49,7 @@
             padding: 10px;
             font-size: 14px;
             resize: none;
-            border-radius: 5px;
+            border-radius: 10px;
         }
         .file-upload {
             display: flex;
@@ -64,19 +64,20 @@
         label {
             background: #444;
             padding: 10px;
-            border-radius: 5px;
+            border-radius: 20px;
             cursor: pointer;
         }
         button {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             background: #ff5c00;
             border: none;
             color: #fff;
             font-size: 16px;
             cursor: pointer;
             margin-top: 10px;
-            border-radius: 5px;
+            border-radius: 25px;
+            font-weight: bold;
         }
         button:hover {
             background: #e04b00;
@@ -86,12 +87,13 @@
             margin-top: 15px;
             background: #222;
             padding: 10px;
-            border-radius: 5px;
+            border-radius: 15px;
         }
         .result-container textarea {
             height: 100px;
             background: #000;
             color: #0f0;
+            border-radius: 10px;
         }
         .result-buttons {
             display: flex;
